Wallpaper removal, env updates, waybar modules added

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -22,8 +22,12 @@ exec-once = waybar
 # Spotify
 exec-once = spotify-launcher
 
-# Discord
+# Discord (with betterdiscord)
+exec-once = bash $HOME/.local/bin/bd-apply.sh
 exec-once = discord
+
+# Bluebubbles
+exec-once = flatpak run app.bluebubbles.BlueBubbles
 
 # Other
 exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
