--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -1,3 +1,6 @@
+# Add ~/.local/bin to $PATH
+exec-once = export PATH="$HOME/.local/bin:$PATH"
+
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
