--- a/.config/hypr/theme.conf
+++ b/.config/hypr/theme.conf
@@ -2,6 +2,7 @@
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Midnight-Orange'
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Vortex-Dark-Icons'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+env = GTK_THEME,Midnight-Orange
 
 # Background
 # exec-once = hyprpaper
