--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -70,6 +70,7 @@
             "class<org.gnome.calculator>": "󰃬",
             "class<gnome-disks>": "󰋊",
             "class<superautopets.x86_64>": "󰳗",
+            "class<bluebubbles>": "",
         },
         "on-scroll-up": "hyprctl dispatch workspace e-1",
         "on-scroll-down": "hyprctl dispatch workspace e+1",
@@ -82,7 +83,7 @@
         "interval": 2
     },
     "memory": {
-        "format": " {}%",
+        "format": "   {}%",
         "tooltip": true,
         "on-click": "kitty --title task_mgr btop",
         "interval": 2
