--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -96,7 +96,7 @@ decoration {
     blur {
         enabled = true
         size = 6
-        passes = 3
+        passes = 0
         new_optimizations = true
         xray = true
         ignore_opacity = on
@@ -107,22 +107,23 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
-    active_opacity = 0.8
-    inactive_opacity = 0.7
+    active_opacity = 0.9
+    inactive_opacity = 0.8
 }
 
 animations {
     enabled = true
-
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.05, 0.9, 0.1, 1.00
 
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 60%
     animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
+
+    bezier = linear, 0.0, 0.0, 1.0, 1.0
+    animation = borderangle, 1, 150, linear, loop
 }
 
 gestures {
@@ -150,6 +151,10 @@ custom {
         # windowrule = pseudo, abc
         # windowrule = monitor 0, xyz
         # windowrule = tile, xy
+
+        # KITTY
+        windowrule = opacity 0.85 override 0.8 override, ^(kitty)$
+        #windowrule = noblur, ^(kitty)$
 
         # Flying kitty!
         windowrule = float, title:^(fly_is_kitty)$
@@ -225,7 +230,16 @@ custom {
 
         # Firefox
         windowrulev2= float, class:firefox, title:Library
+        windowrule = opacity 0.95 override 0.9 override, ^(firefox)$
+        windowrulev2 = opacity 0.7 override 0.7 override, title:^.*(New Tab).*$ class:^(firefox)$
+        
+        # Bluebubbles
+        windowrule = opacity 0.9 override 0.8 override, ^(bluebubbles)$
+        windowrule = noblur, ^(bluebubbles)$
 
+
+        windowrule = opacity 0.9 override 0.8 override, ^(discord)$
+        windowrule = noblur, ^(discord)$
 
         # Gnome Calculator
         windowrulev2 = float, class:org.gnome.Calculator
@@ -329,7 +343,7 @@ custom {
 
         # Ricing :p
         bind = CTRL, 1, exec, kitty --title fly_is_kitty sh -c 'cava'
-        bind = CTRL, 2, exec, kitty --title donut_is_kitty sh -c '~/.local/bin/donut'
+        bind = CTRL, 2, exec, kitty --title donut_is_kitty sh -c 'pipes.sh'
         #bind = CTRL, 3, exec, kitty --title clock_is_kitty sh -c 'tty-clock
         # xev | grep -A2 --line-buffered '^KeyRelease' | sed -n '/keycode /s/^.*keycode \([0-9]*\).* (.*, \(.*\)).*$/\1 \2/p'
 
