--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -60,6 +60,7 @@
             "class<discord>": "",
             "class<thunderbird>": "",
             "title<Spotify Premium>": "",
+            "class<spotify>": "",
             "class<nemo>": "",
             "class<org.pulseaudio.pavucontrol>": "",
             "class<geany>": "󱞁",
