Removing old nwg-stuff

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -50,11 +50,12 @@ print_info() {
     info "${cl1} ╠═" memory
     #info "${cl6} ├─" battery
     info "${cl1} ╠═" uptime
-    info "${cl1} ╚═󰋊" disk
+    info "${cl1} ╠═󰋊" disk
+    info "${cl1} ╚═" uptime
     prin "${cl4} °°••....••°°°°••....••°°°°••....••°°"
     #prin
     info "${cl2} ╔═" de
-    info "${cl2} ╠═󱂬" wm
+    #info "${cl2} ╠═󱂬" wm
     info "${cl2} ╠═" term
 #    info "${cl3} ├─ﯔ" term_font
     info "${cl2} ╠═" theme
@@ -64,6 +65,7 @@ print_info() {
     #prin
     # prin " \n \n ${cl3} \n \n ${cl5} \n \n ${cl2}  \n \n ${cl6}  \n \n ${cl4}  \n \n ${cl1}  \n \n ${cl7}  \n \n ${cl0}"
 }
+
 magenta="\033[1;35m"
 green="\033[1;32m"
 white="\033[1;37m"
@@ -438,7 +440,7 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/')
+disk_show=('/' '/dev/sdd1')
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
@@ -462,7 +464,7 @@ disk_show=('/')
 # none:   'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
-disk_subtitle="mount"
+disk_subtitle="none"
 
 # Disk percent.
 # Show/Hide disk percent.
