--- a/.config/hypr/theme.conf
+++ b/.config/hypr/theme.conf
@@ -1,7 +1,9 @@
 ## THEMING ##
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Midnight-Orange'
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Vortex-Dark-Icons'
-exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+
 env = GTK_THEME,Midnight-Orange
 
 # Background
