--- a/.config/nwg-displays/config
+++ b/.config/nwg-displays/config
@@ -3,5 +3,6 @@
   "snap-threshold": 10,
   "indicator-timeout": 500,
   "custom-mode": [],
-  "use-desc": false
+  "use-desc": false,
+  "confirm-timeout": 10
 }
