--- a/.config/pacseek/config.json
+++ b/.config/pacseek/config.json
@@ -3,15 +3,15 @@
 	"AurTimeout": 5000,
 	"AurSearchDelay": 500,
 	"AurUseDifferentCommands": false,
-	"AurInstallCommand": "",
-	"AurUpgradeCommand": "",
+	"AurInstallCommand": "paru -S",
+	"AurUpgradeCommand": "paru -Syu",
 	"DisableAur": false,
 	"MaxResults": 500,
 	"PacmanDbPath": "/var/lib/pacman/",
 	"PacmanConfigPath": "/etc/pacman.conf",
-	"InstallCommand": "yay -S",
-	"UninstallCommand": "yay -Rs",
-	"SysUpgradeCommand": "yay",
+	"InstallCommand": "paru -S",
+	"UninstallCommand": "paru -Rs",
+	"SysUpgradeCommand": "paru",
 	"SearchMode": "Contains",
 	"SearchBy": "Name",
 	"CacheExpiry": 10,
