--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -1,5 +1,7 @@
 # Add ~/.local/bin to $PATH
-exec-once = export PATH="$HOME/.local/bin:$PATH"
+exec-once = export PATH="$HOME/.local/bin:$HOME/.cargo/bin:$PATH"
+# Add ~/.cargo/bin to $PATH
+exec-once = export PATH=$PATH"
 
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
@@ -29,4 +31,4 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 # Application Fixes
-env LIBGL_ALWAYS_SOFTWARE=true kitty
+env = BEMOJI_PICKER_CMD,fuzzel -d
