--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,6 +7,7 @@ source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/theme.conf
 
+
 # VARIABLES
 $term = kitty
 $browser = MOZ_ENABLE_WAYLAND=1 firefox
@@ -17,7 +18,6 @@ $music = spotify-launcher
 $discord = discord
 $scripts = $HOME/.local/bin
 
-# Environment Variables
 # GENERAL SETTINGS
 general {
     border_size = 2
@@ -234,17 +234,19 @@ custom {
         windowrulev2 = opacity 0.7 override 0.7 override, title:^.*(New Tab).*$ class:^(firefox)$
         
         # Bluebubbles
-        windowrule = opacity 0.9 override 0.8 override, ^(bluebubbles)$
-        windowrule = noblur, ^(bluebubbles)$
-
-
-        windowrule = opacity 0.9 override 0.8 override, ^(discord)$
-        windowrule = noblur, ^(discord)$
+        windowrulev2 = maxsize 522 997, class:^(bluebubbles)$
 
         # Gnome Calculator
         windowrulev2 = float, class:org.gnome.Calculator
         windowrulev2 = size 330 500, class:org.gnome.Calculator
         windowrulev2 = move 17 313, class:org.gnome.Calculator
+
+        # XWayland Workaround
+        windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+        windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+        windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+        windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+        windowrulev2 = noblur, class:^(xwaylandvideobridge)$
     }
 
     # KEY BINDINGS, see https://wiki.hyprland.org/Configuring/Binds/ for more
@@ -277,6 +279,9 @@ custom {
         # Wofi and notification binds
         bind = SUPER, V, exec, pkill fuzzel || cliphist list | fuzzel -d | cliphist decode | wl-copy
         bind = SUPER, N, exec, swaync-client -t -sw
+        
+        # Emoji Picker with bemoji and fuzzel
+        bind = SUPER, O, exec, bemoji -n
 
         # Other dispatchers
         bind = ALT, Tab, cyclenext
