--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -72,6 +72,7 @@
             "class<gnome-disks>": "󰋊",
             "class<superautopets.x86_64>": "󰳗",
             "class<bluebubbles>": "",
+            "class<lor.exe>": "󰘸",
         },
         "on-scroll-up": "hyprctl dispatch workspace e-1",
         "on-scroll-down": "hyprctl dispatch workspace e+1",
